Gtk3: Use Gtk window bg color as Chrome toolbar color

This CL:

* Removes all usage of GtkToolbar, and instead uses the window
  background.

* Removes all usage of GetReadableColor.  (see
  https://crbug.com/706448 for context)

* Changes throbber colors slightly, such that the throbber waiting
  color is different from the throbber spinning color, like it was on
  the Gtk2 theme.

BUG=706448
R=erg@chromium.org

Review-Url: https://codereview.chromium.org/2784413002
Cr-Commit-Position: refs/heads/master@{#460896}

Former-commit-id: b7e79b92a27126f02c478e332c3df9c4255df71b